<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2019  Consiglio Nazionale delle Ricerche
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as
  ~     published by the Free Software Foundation, either version 3 of the
  ~     License, or (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses />.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.cnr.si.sigla</groupId>
	<version>6.5.1-SNAPSHOT</version>
	<artifactId>sigla-parent</artifactId>
	<description>Sistema Informativo per la Gestione delle Linee di Attività</description>
	<packaging>pom</packaging>
	<parent>
		<artifactId>archetype</artifactId>
		<groupId>it.cnr.si</groupId>
		<version>1.1.0</version>
	</parent>
	<modules>
		<module>sigla-backend</module>
		<module>sigla-ejb</module>
		<module>sigla-ws</module>
		<module>sigla-web</module>
	</modules>
	<properties>
		<ace.version>4.1.18</ace.version>
		<perlapa.version>1.0.16</perlapa.version>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<sonar.skip>true</sonar.skip>
		<java.version>1.8</java.version>
		<siopeplus.version>1.1.1</siopeplus.version>
		<sdi.fatturapa.version>0.0.1</sdi.fatturapa.version>
		<ws.client.version>0.0.5</ws.client.version>
		<spring.version>5.2.5.RELEASE</spring.version>
		<jada.version>7.0.45</jada.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.directory>target</project.build.directory>
		<sigla.build.number>${maven.build.timestamp}</sigla.build.number>
		<slf4j.version>1.7.21</slf4j.version>
		<liquibase.version>3.5.3</liquibase.version>
		<pdfbox.version>2.0.25</pdfbox.version>
		<storage.cloud.version>2.0.20</storage.cloud.version>
		<jackson.version>2.10.3</jackson.version>
		<commons-io.version>2.7</commons-io.version>
		<git.changelog.maven.plugin.version>1.61</git.changelog.maven.plugin.version>
		<version.thorntail>2.7.0.Final</version.thorntail>

		<version.arquillian>1.2.1.Final</version.arquillian>
		<version.arquillian-drone>2.0.1.Final</version.arquillian-drone>
		<version.arquillian-graphene>2.3.2</version.arquillian-graphene>
		<arquillian.shrinkwrap.resolver>3.1.3</arquillian.shrinkwrap.resolver>
		<version.junit>4.13.1</version.junit>
		<fluent-hc.version>4.5</fluent-hc.version>
		<test.exclude.package>it.cnr.test.oracle.**</test.exclude.package>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>se.bjurr.gitchangelog</groupId>
				<artifactId>git-changelog-maven-plugin</artifactId>
				<version>${git.changelog.maven.plugin.version}</version>
				<configuration>
					<settingsFile>changelog.json</settingsFile>
					<file>docs/CHANGELOG.md</file>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>javadoc</id>
			<properties>
				<maven.javadoc.skip>false</maven.javadoc.skip>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.3</version>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>changelog</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-scm-plugin</artifactId>
							<inherited>false</inherited>
							<configuration>
								<includes>docs/CHANGELOG.md</includes>
								<message>Generate CHANGELOG.md [ci skip]</message>
								<pushChanges>true</pushChanges>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>docs</id>
			<properties>
				<timestamp>${maven.build.timestamp}</timestamp>
				<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
				<scm.plugin.file.list>publiccode.yml,docs/conf.py</scm.plugin.file.list>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>com.google.code.maven-replacer-plugin</groupId>
						<artifactId>maven-replacer-plugin</artifactId>
						<version>1.3.5</version>
						<executions>
							<execution>
								<id>replace version on conf.py</id>
								<phase>verify</phase>
								<goals>
									<goal>replace</goal>
								</goals>
								<configuration>
									<filesToInclude>docs/conf.py</filesToInclude>
									<replacements>
										<replacement>
											<token>release.*</token>
											<value>release = '${project.version}'</value>
										</replacement>
									</replacements>
								</configuration>
							</execution>
							<execution>
								<id>replace version on publiccode</id>
								<phase>verify</phase>
								<goals>
									<goal>replace</goal>
								</goals>
								<configuration>
									<filesToInclude>*publiccode.yml</filesToInclude>
									<replacements>
										<replacement>
											<token>softwareVersion.*</token>
											<value>softwareVersion: ${project.version}</value>
										</replacement>
										<replacement>
											<token>releaseDate.*</token>
											<value>releaseDate: '${timestamp}'</value>
										</replacement>
									</replacements>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<licenses>
		<license>
			<name>GNU AFFERO GENERAL PUBLIC LICENSE</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.html</url>
			<comments>
				Copyright (C) 2019 Consiglio Nazionale delle Ricerche

				This program is free software: you can redistribute it and/or modify
				it under the terms of the GNU Affero General Public License as
				published by the Free Software Foundation, either version 3 of the
				License, or (at your option) any later version.

				This program is distributed in the hope that it will be useful,
				but WITHOUT ANY WARRANTY; without even the implied warranty of
				MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
				GNU Affero General Public License for more details.

				You should have received a copy of the GNU Affero General Public License
				along with this program.  If not, see https://www.gnu.org/licenses/
			</comments>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>marco.spasiano</id>
			<name>Marco Spasiano</name>
			<email>marco.spasiano@cnr.it</email>
			<organization>Consiglio Nazionale delle Ricerche</organization>
			<organizationUrl>http://www.cnr.it</organizationUrl>
			<roles>
				<role>project lead</role>
				<role>architet</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>raffaele.pagano</id>
			<name>Raffaele Pagano</name>
			<email>raffaele.pagano@cnr.it</email>
			<organization>Consiglio Nazionale delle Ricerche</organization>
			<organizationUrl>http://www.cnr.it</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>gianfranco.gasparro</id>
			<name>Gianfranco Gasparro</name>
			<email>gianfranco.gasparro@cnr.it</email>
			<organization>Consiglio Nazionale delle Ricerche</organization>
			<organizationUrl>http://www.cnr.it</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>rosangela.pucciarelli</id>
			<name>Rosangela Pucciarelli</name>
			<email>rosangela.pucciarelli@cnr.it</email>
			<organization>Consiglio Nazionale delle Ricerche</organization>
			<organizationUrl>http://www.cnr.it</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>francesco.uliana</id>
			<name>Francesco Uliana</name>
			<email>francesco@uliana.it</email>
			<roles>
				<role>architet</role>
				<role>developer</role>
			</roles>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:ssh://git@git.si.cnr.it/dev/sigla-main.git</connection>
		<developerConnection>scm:git:ssh://git@git.si.cnr.it/dev/sigla-main.git</developerConnection>
		<tag>6.3.62</tag>
	</scm>
</project>
